--- a/sks.tex
+++ b/sks.tex
@@ -1,6 +1,6 @@
 \newcommand{\SKS}{\mathsf{SKS}}
 
-\section{System $\SKS$}
+\section{System SKS}
 
 We now define the standard deductive system for classical propositional logic in deep inference $\SKS$\index{$\SKS$} \cite{Brun:03:Atomic-C:oz,Brun:06:Cut-Elim:cq,Brun:06:Locality:zh,BrunTiu:01:A-Local-:mz}. For an excellent reference to previous work on normalisation in $\SKS$, see \cite{Brun:04:Deep-Inf:rq}. Subsystems of $\SKS$ are used throughout this thesis.
 
