--- a/introduction.tex
+++ b/introduction.tex
@@ -51,7 +51,7 @@ Atomic flows were motivated by wanting to generalise traditional normalisation, 
 
 \TODO{First explain that logic goes into linear rules.}
 
-We claim that atomic flows give a more general view of normalisation because they provide new normal forms, of which the traditional normal forms are special cases; at the same time they show that less of the available information is needed in order to obtain normalisation. \TODO{And surprisingly: not the logical relations!}
+We claim that atomic flows give a more general view of normalisation because they provide new normal forms, of which the traditional normal forms are special cases; at the same time they show that less of the available information is needed in order to obtain normalisation. \TODO{And surprisingly: not the logical relations!}
 
 \TODO{No detours}
 
@@ -63,13 +63,18 @@ Conventional wisdom teaches us that in order to achieve normalisation a certain 
 
 Strictly speaking, our results could be expressed without the use of atomic flows. However, the principal advantage of atomic flows is that it allows us to use a graphical language to describe the gist of our results. Once the language is mastered, the technical details of most of our results can easily be reconstructed based on the illustrations alone. Furthermore, atomic flows provide an intuition for working with normalisation which greatly simplified the discovery of some of our results.
 
-\TODO{Proof identity and beyond.}
+Some of the results in this thesis are also available in journal articles. One article has been published, one has been submitted and three are still beeing written. They are, respectively:
+\begin{itemize}
+ \item atomic flows were introduced and the first normalisation results were shown in \emph{Normalisation Control in Deep Inference via Atomic Flows} with Alessio Guglielmi, published in \emph{Logical Methods in Computer Science},
+ \item quasipolynomial cut-elimination was shown using atomic flows in \emph{Quasipolynomial Normalisation in Deep Inference via Atomic Flows and Threshold Formulae}, with Paola Bruscoli, Alessio Guglielmi and Michel Parigot, submitted to \emph{Mathematical Structures in Computer Science},
+ \item we are showing refined and generalised normalisation results in \emph{Normalisation Control in Deep Inference via Atomic Flows II}, with Alessio Guglielmi,
+ \item we are showing (among other things) that there is a polynomial relationship between the sizes of derivations and atomic flows in \emph{On the Complexity of the Switch and Medial Rules}, with Paola Bruscoly, Alessio Guglielmi and Lutz Stra\ss{}burger, and
+ \item we are defining two new deep-inference formalisms, for which atomic flows and the associated normalisation procedures are invariants in \emph{Formalism A and Formalism B}, with Alessio Guglielmi and Michel Parigot
+\end{itemize}
 
-\TODO{In these three years we could see that many people saw something in our atomic flows: }
+In these three years we could see that many people saw something in our atomic flows. In particular, I have been involved in discussions about using atomic flows for computational interpretations, implicit computational complexity, as well as normalisation of intuitionistic, modal and first-order logics.
 
-\TODO{Publications: 1+1+3}
-
-\TODO{Some words about conesquences of this work on proof identity and beyond. Computational interpretations, sharing , optimality, impl. comp. comple., modal logic, boxes}
+At the moment atomic flows are a tool for studying normalisation. However, the most promising direction of research on atomic flows for the future, is in my opinion, to define a new formalism based on atomic flows with the aim of solving the identity of proofs. Atomic flows are promising in this regard, since they are bureaucracy free, they represent how proofs behave under (a range of different notions of) normalisation, and they represent the size of proofs. However, an important open question is to decide how much information needs to be added to atomic flows before they preserve the validity of proofs.
 
 The thesis is split in three parts.
 \begin{itemize}
